syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.pix";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.pix;

service PixCrudService {
  rpc create (CadastrarChaveRequest) returns (CadastrarChaveResponse) {}
}

enum TipoChave {
    CHAVE_DESCONHECIDA = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    CHAVE_ALEATORIA = 4;
}

enum TipoConta {
    CONTA_DESCONHECIDA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message CadastrarChaveRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  TipoConta tipoConta = 3;
  string valorChave = 4;
}

message CadastrarChaveResponse {
  string idPixGerado = 1;
}